src/app/[locale]/components/contact/index.scss
@import "../../../utilities/variables.scss";

.contact-design{
  display: flex;
  flex-direction: row-reverse;
  justify-content:center;
  align-items: center;
  .contact-form{
      background-color: #3e3e3e;;
      margin-top: 2rem;
    width: 800px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 2rem;
    border-radius: 15px;
    box-shadow: 0 20px 40px rgba(0, 0, 0, .4);

    .texts{
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        width: 50%;
    }
      .phone{
        margin-left: 2rem;
        margin-bottom: 2rem;
        color: #ddd;
        font-size: 12px;
        text-transform: uppercase;
        font-weight: 700;
      }
      .text{
        margin-left: 2rem;
        text-transform: uppercase;
        margin-top: 2rem;
        color: #eb466b;
        font-weight: 700;
        font-size: 42px;
      }
      .form{
          display: flex;
          flex-direction: column;
          gap: 1rem;
          margin-right: 2rem;
          margin-top: 2rem;
          width: 50%;
          .form-label{
              display: flex;
              justify-content: space-between;
              flex-direction: column;
              .name,.email,.message{
                display: none;
              }
              .input{
                  all: unset;
                  border-bottom: 1px solid #666;
                  width: 100%;
                  text-transform: uppercase;
                  padding-bottom: .5rem;
                  &:focus{
                    border-bottom: 1px solid #ddd;
                  }
                  &:focus::placeholder{
                    color: #ddd;
                  }
              }
              .textarea{
                  border: 1px solid $onyx_grey;
              }
          }
          .buttons{
            display: flex;
            flex-direction: row;
            justify-content: flex-end;
            gap: 2rem;
            color: #eb466b;
            text-transform: uppercase;
            font-weight: 700;
            .button{
                background: none;
                color: inherit;
                border: none;
                padding: 0;
                font: inherit;
                cursor: pointer;
                outline: inherit;
                text-transform: uppercase;
            }
            .cancel-button{
                cursor: pointer;
            }
          }
      }
  }
}


@media (max-width:1024px){
  .contact-us{
      .contact-form{
          width: 50%;
      }
  }
}

@media (max-width:425px){
  .contact-us{
      .contact-form{
          width: 90%;
          .svg-contact-us{
              right: -20px;
          }
      }
  }
}

